--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Hi! I'm Douglas and I'm a Data Science enthisiast trying to learn everything I need to become a Data Scientist while I look for job opportunities as a Data Scientist, Data Analyst, BI Analyst, DBA or Python Developer.
-             My studying is being documented in my Medium blog through project reports and tutorials, and my GitHub account, where I have a number of analysis and machine learning models.</p>
+          <p>Hi! I'm Douglas and I'm a Data Science enthusiast trying to learn everything I need to become a Data Scientist while I look for job opportunities as a Data Scientist, Data Analyst, BI Analyst, DBA or Python Developer.
+             My studying is being documented in my Medium blog through project reports and tutorials, and my GitHub account where I have a number of analysis and machine learning models.</p>
         </div>
 
         <div class="row">
@@ -129,7 +129,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Skill acquired through bachelors degree, undergraduate research, internship, online courses, books and projects.</p>
+          <p>Skills acquired through bachelors degree, undergraduate research, internship, online courses, books and projects.</p>
         </div>
 
         <div class="row skills-content">
@@ -195,11 +195,11 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Computer Engineer Bachelor with over 2 years with practival experience in the area of Home Automation and Machine Learning, acquired through
+          <p>Computer Engineer Bachelor with over 2 years with practical experience in the area of Home Automation and Machine Learning, acquired through
              Internship and Undergraduate Research. Developed skills in Data Science, Data Analysis, Database Modeling, Social Media Management and Digital Marketing. </p>
           <br>
-          <p>I seek to be constantly learning and have recently taken online courses as Deep Learning Specialization and Machine Learning Specialization by Andrew Ng,
-            Microsoft Power BI para Data Science 2.0 and much more. Now my focus is to begin my professional trail.</p>   
+          <p>I seek to be constantly learning and have recently taken online courses such as Deep Learning Specialization and Machine Learning Specialization by Andrew Ng,
+            Microsoft Power BI for Data Science 2.0 by DSA and much more. Now my focus is to begin my professional trail.</p>   
         </div>
 
         <div class="row">
@@ -219,7 +219,7 @@
               <h5>2021 - 2022</h5>
               <p><em>Connect Home BA - Salvador, BA, Brazil</em></p>
               <ul>
-                <li>Structuring of the database of products, generating agility and uniformity in customer service and support.</li>
+                <li>Structuring of the products database, generating agility and uniformity in customer service and support.</li>
                 <li>Management of Social Media and Digital Marketing. </li>
                 <li>Improvement and team instruction of the device configuration process.</li>
               </ul>
@@ -235,9 +235,9 @@
               <p><em>Federal University of Bahia (UFBA), Brazil</em></p>
               <p>Music Information Retrieval (MIR) with Machine Learning for Musical Tempo Estimation.</p>
               <ul>
-                <li>Revitalization and organization of music databases to facilitate understanding, manipulations and visualization of the data.</li>
-                <li>Development of algorithms for extracting statistical and spectral attributes from music (MIR).</li>
-                <li>Implementation and testing of Machine Learning algorithms to recover the musical tempo from musical archives with results on par with the literature.</li>
+                <li>Revitalization and organization of music databases to facilitate understanding, manipulation and visualization of the data.</li>
+                <li>Development of algorithms to extract statistical and spectral attributes from music (MIR).</li>
+                <li>Implementation and testing of Machine Learning models to recover the musical tempo from musical archives with results on par with the literature.</li>
               </ul>
             </div>
           </div>
