--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>24 March 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="https://douglasrfleite.github.io/">I'm Douglas</a> </span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+55 71 99904-4373</span></li>
                 </ul>
               </div>
